--- a/index.html
+++ b/index.html
@@ -97,12 +97,9 @@
   <div class="app">
     <div class="inner">
       <header>
-        <h1>🧘‍♀️ Meditasyon Türleri Rehberi</h1>
-        <h2>H2 • Pozisyonlara ve Amaçlara Göre Filtrelenebilir Tablo</h2>
-        <p>Pastel arayüz, mobil güvenli tasarım ve canlı filtreler. <span class="chip">zorluk</span> · <span class="chip">süre</span> · <span class="chip">niyet</span></p>
+        <h1>Tabirly Meditasyon Türleri Rehberi</h1>
+        <h2>Pozisyonlara ve Amaçlara Göre Filtrelenebilir Tablo</h2>
         <div class="meta">
-          <span class="chip">TR</span>
-          <span class="chip">GitHub Pages</span>
           <button id="themeBtn" class="btn theme-toggle" aria-pressed="false" aria-label="Tema değiştir">🌗 Tema</button>
         </div>
       </header>
@@ -110,10 +107,10 @@
       <!-- SECTION A: Türler -->
       <section class="card" id="types">
         <div class="hd">
-          <h2>H2 • 🌿 Meditasyon Türleri (Pozisyon / Teknik)</h2>
+          <h2>Meditasyon Türleri (Pozisyon / Teknik)</h2>
         </div>
         <div class="bd">
-          <h3>H3 • Filtreler</h3>
+          <h3>Filtreler</h3>
           <div class="filters" role="region" aria-label="Meditasyon Türleri Filtreleri">
             <label for="typeSearch">Arama</label>
             <input type="search" id="typeSearch" placeholder="Ara: zazen, nefes, orman…" aria-label="Metin arama">
