--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
 
       <!-- SECTION B: Amaçlar -->
       <section class="card" id="goals">
-        <div class="hd"><h2>H2 • 🎯 Amaçlara Göre Meditasyon</h2></div>
+        <div class="hd"><h2>🎯 Amaçlara Göre Meditasyon</h2></div>
         <div class="bd">
-          <h3>H3 • Filtreler</h3>
+          <h3>Filtreler</h3>
           <div class="filters" role="region" aria-label="Amaçlara Göre Filtreler">
             <label for="goalSearch">Arama</label>
             <input type="search" id="goalSearch" placeholder="Ara: stres, uyku, şifa…" aria-label="Amaç arama">
@@ -223,10 +223,10 @@
       </section>
 
       <footer style="margin-top:22px">
-        <h3>H3 • SSS</h3>
-        <h4>H4 • Günde kaç dakika?</h4>
+        <h3>SSS</h3>
+        <h4>Günde kaç dakika?</h4>
         <p>5–10 dk ile başla; her hafta +5 dk.</p>
-        <h4>H4 • Hangi pozisyon en iyi?</h4>
+        <h4>Hangi pozisyon en iyi?</h4>
         <p>Rahat ve sürdürülebilir olan.</p>
       </footer>
     </div>
