--- a/index.html
+++ b/index.html
@@ -135,32 +135,28 @@
           </div>
 
           <div class="table-wrap">
-            <table id="typesTable">
-              <thead>
-                <tr><th>🧘 Tür Adı</th><th>⏱️ Süre</th><th>🌿 Ortam</th><th>💫 Ana Etki</th><th>🔥 Zorluk</th></tr>
-              </thead>
-              <tbody>
+            $1
                 <tr data-dmin="20" data-dmax="40" data-diff="orta"><td><strong>Zazen (Zen)</strong></td><td>20–40 dk</td><td>Sessiz oda, minimal alan</td><td>Zihin duruluğu, farkındalık</td><td>Orta</td></tr>
                 <tr data-dmin="45" data-dmax="180" data-diff="zor"><td><strong>Vipassana</strong></td><td>45 dk+</td><td>Sessizlik, doğal alan</td><td>Duygu ve düşünce gözlemi</td><td>Zor</td></tr>
                 <tr data-dmin="5" data-dmax="30" data-diff="kolay"><td><strong>Mindfulness</strong></td><td>5–30 dk</td><td>Her yer (ofis, ev, yürüyüş)</td><td>Şu ana odaklanma, stres düşürme</td><td>Kolay</td></tr>
                 <tr data-dmin="10" data-dmax="20" data-diff="orta"><td><strong>Metta (Sevgi Nezaketi)</strong></td><td>10–20 dk</td><td>Rahat oturuş, kalp hizası</td><td>Şefkat, affetme</td><td>Orta</td></tr>
-                <tr data-dmin="20" data-dmax="20" data-diff="orta"><td><strong>Transandantal (TM)</strong></td><td>20 dk</td><td>Sessiz, dikkat dağıtıcı yok</td><td>Derin gevşeme, içsel huzur</td><td>Orta</td></tr>
+                <tr data-dmin="20" data-dmax="20" data-diff="orta"><td><strong>Transandantal Meditasyon (TM)</strong></td><td>20 dk</td><td>Sessiz, dikkat dağıtıcı yok</td><td>Derin gevşeme, içsel huzur</td><td>Orta</td></tr>
                 <tr data-dmin="20" data-dmax="40" data-diff="kolay"><td><strong>Yoga Nidra</strong></td><td>20–40 dk</td><td>Yatarak, loş ortam</td><td>Uyku öncesi gevşeme, bilinçaltı temizliği</td><td>Kolay</td></tr>
-                <tr data-dmin="5" data-dmax="15" data-diff="orta"><td><strong>Trataka (Mum)</strong></td><td>5–15 dk</td><td>Karanlık oda, mum alevi</td><td>Konsantrasyon</td><td>Orta</td></tr>
-                <tr data-dmin="30" data-dmax="60" data-diff="zor"><td><strong>Kundalini</strong></td><td>30–60 dk</td><td>Oturarak</td><td>Enerji yükselmesi</td><td>Zor</td></tr>
-                <tr data-dmin="15" data-dmax="40" data-diff="orta"><td><strong>Chakra</strong></td><td>15–40 dk</td><td>Renk/ışık destekli</td><td>Merkez dengeleme</td><td>Orta</td></tr>
-                <tr data-dmin="10" data-dmax="30" data-diff="kolay"><td><strong>Yürüyüş (Kinhin)</strong></td><td>10–30 dk</td><td>Doğa veya uzun koridor</td><td>Beden farkındalığı</td><td>Kolay</td></tr>
-                <tr data-dmin="20" data-dmax="45" data-diff="orta"><td><strong>Qi Gong / Tai Chi</strong></td><td>20–45 dk</td><td>Açık hava</td><td>Chi dolaşımı</td><td>Orta</td></tr>
-                <tr data-dmin="15" data-dmax="60" data-diff="zor"><td><strong>Zikir / Semâ</strong></td><td>15–60 dk</td><td>Manevi ortam, topluluk</td><td>Ruhsal arınma</td><td>Zor</td></tr>
-                <tr data-dmin="5" data-dmax="10" data-diff="kolay"><td><strong>Kalp Koherans</strong></td><td>5–10 dk</td><td>Rahat koltuk</td><td>Kalp-beyin senkron</td><td>Kolay</td></tr>
-                <tr data-dmin="30" data-dmax="60" data-diff="orta"><td><strong>Ses Banyosu</strong></td><td>30–60 dk</td><td>Grup, kaseler</td><td>Frekans temizliği</td><td>Orta</td></tr>
-                <tr data-dmin="10" data-dmax="30" data-diff="kolay"><td><strong>Doğa</strong></td><td>10–30 dk</td><td>Orman, deniz kenarı</td><td>Topraklanma</td><td>Kolay</td></tr>
-                <tr data-dmin="10" data-dmax="20" data-diff="kolay"><td><strong>Renk</strong></td><td>10–20 dk</td><td>Loş ışık</td><td>Duygusal denge</td><td>Kolay</td></tr>
-                <tr data-dmin="15" data-dmax="20" data-diff="kolay"><td><strong>Mala (108)</strong></td><td>~15 dk</td><td>Sessiz alan</td><td>Tekrar odak</td><td>Kolay</td></tr>
-                <tr data-dmin="15" data-dmax="60" data-diff="kolay"><td><strong>Yaratıcı Akış</strong></td><td>15–60 dk</td><td>Yaratım alanı</td><td>Flow</td><td>Kolay</td></tr>
-                <tr data-dmin="10" data-dmax="30" data-diff="kolay"><td><strong>Rehberli Görselleştirme</strong></td><td>10–30 dk</td><td>Kulaklık</td><td>Niyet & vizyon</td><td>Kolay</td></tr>
-                <tr data-dmin="1440" data-dmax="14400" data-diff="zor"><td><strong>Sessizlik İnzivası</strong></td><td>1–10 gün</td><td>İnziva alanı</td><td>Derin içgörü</td><td>Zor</td></tr>
-              </tbody>
+                <tr data-dmin="5" data-dmax="15" data-diff="orta"><td><strong>Trataka (Mum Odaklı)</strong></td><td>5–15 dk</td><td>Karanlık oda, mum alevi</td><td>Konsantrasyon, göz odak gücü</td><td>Orta</td></tr>
+                <tr data-dmin="30" data-dmax="60" data-diff="zor"><td><strong>Kundalini Meditasyonu</strong></td><td>30–60 dk</td><td>Oturarak, rahat kıyafet</td><td>Enerji yükselmesi, farkındalık patlaması</td><td>Zor</td></tr>
+                <tr data-dmin="15" data-dmax="40" data-diff="orta"><td><strong>Chakra Meditasyonu</strong></td><td>15–40 dk</td><td>Renk/ışık destekli sessiz alan</td><td>Enerji merkezlerini dengeleme</td><td>Orta</td></tr>
+                <tr data-dmin="10" data-dmax="30" data-diff="kolay"><td><strong>Yürüyüş Meditasyonu (Kinhin)</strong></td><td>10–30 dk</td><td>Doğa veya uzun koridor</td><td>Denge, bedensel farkındalık</td><td>Kolay</td></tr>
+                <tr data-dmin="20" data-dmax="45" data-diff="orta"><td><strong>Qi Gong / Tai Chi</strong></td><td>20–45 dk</td><td>Açık hava</td><td>Yaşam enerjisi (Chi) dolaşımı</td><td>Orta</td></tr>
+                <tr data-dmin="15" data-dmax="60" data-diff="zor"><td><strong>Sufi Zikir / Semâ</strong></td><td>15–60 dk</td><td>Manevi atmosfer, topluluk</td><td>Ruhsal arınma, aşk bilinci</td><td>Zor</td></tr>
+                <tr data-dmin="5" data-dmax="10" data-diff="kolay"><td><strong>Kalp Koherans</strong></td><td>5–10 dk</td><td>Sessiz, rahat koltuk</td><td>Kalp-beyin senkronizasyonu</td><td>Kolay</td></tr>
+                <tr data-dmin="30" data-dmax="60" data-diff="orta"><td><strong>Ses Banyosu</strong></td><td>30–60 dk</td><td>Grup, gongs/kaseler</td><td>Frekansla enerji temizliği</td><td>Orta</td></tr>
+                <tr data-dmin="10" data-dmax="30" data-diff="kolay"><td><strong>Doğa Meditasyonu</strong></td><td>10–30 dk</td><td>Orman, deniz kenarı, park</td><td>Topraklanma, dinginlik</td><td>Kolay</td></tr>
+                <tr data-dmin="10" data-dmax="20" data-diff="kolay"><td><strong>Renk Meditasyonu</strong></td><td>10–20 dk</td><td>Loş ışık, renk filtreleri</td><td>Duygusal denge, aura temizliği</td><td>Kolay</td></tr>
+                <tr data-dmin="15" data-dmax="20" data-diff="kolay"><td><strong>Mala Meditasyonu (108)</strong></td><td>~15 dk</td><td>Sessiz, mala boncuk</td><td>Odak, tekrar yoluyla sakinlik</td><td>Kolay</td></tr>
+                <tr data-dmin="15" data-dmax="60" data-diff="kolay"><td><strong>Yaratıcı Akış (Mandala/Boyama)</strong></td><td>15–60 dk</td><td>Sessiz yaratım alanı</td><td>Akış (flow), içsel ifade</td><td>Kolay</td></tr>
+                <tr data-dmin="10" data-dmax="30" data-diff="kolay"><td><strong>Rehberli Görselleştirme</strong></td><td>10–30 dk</td><td>Kulaklık, rahat ortam</td><td>Niyet, motivasyon, vizyon</td><td>Kolay</td></tr>
+                <tr data-dmin="1440" data-dmax="14400" data-diff="zor"><td><strong>Sessizlik İnzivası (Retreat)</strong></td><td>1–10 gün</td><td>İnziva alanı</td><td>Derin farkındalık, ego çözülmesi</td><td>Zor</td></tr>
+              $2
             </table>
             <div class="cards" id="typesCards" aria-hidden="true"></div>
           </div>
@@ -195,30 +191,28 @@
           </div>
 
           <div class="table-wrap">
-            <table id="goalsTable">
-              <thead><tr><th>🎯 Amaç</th><th>🧘 Türler</th><th>💫 Etki</th><th>🔥 Zorluk</th></tr></thead>
-              <tbody>
-                <tr data-tags="stres denge" data-diff="kolay"><td>Stres Azaltmak</td><td>Mindfulness, Nefes, Yoga Nidra</td><td>Parasempatik aktivasyon</td><td>Kolay</td></tr>
-                <tr data-tags="uyku bilinçaltı" data-diff="kolay"><td>Uyku</td><td>Yoga Nidra, Görselleştirme</td><td>Alfa–teta dalgaları</td><td>Kolay</td></tr>
-                <tr data-tags="öz-sevgi aşk" data-diff="kolay"><td>Öz Şefkat</td><td>Metta, Kalp Koherans</td><td>Duygusal yumuşama</td><td>Kolay</td></tr>
-                <tr data-tags="enerji motivasyon" data-diff="orta"><td>Enerji</td><td>Kundalini, Pranayama, Qi Gong</td><td>Prana/Chi akışı</td><td>Orta</td></tr>
-                <tr data-tags="temizlik aura" data-diff="orta"><td>Negatif Temizlik</td><td>Ses Banyosu, Chakra</td><td>Frekans arınma</td><td>Orta</td></tr>
-                <tr data-tags="konsantrasyon zihin" data-diff="zor"><td>Düşünce Kontrolü</td><td>Zazen, Trataka</td><td>Odak keskinliği</td><td>Zor</td></tr>
-                <tr data-tags="kaygı denge" data-diff="kolay"><td>Kaygı/Panik</td><td>Box Breathing, Mindfulness</td><td>Regülasyon</td><td>Kolay</td></tr>
-                <tr data-tags="sezgi spiritüel" data-diff="orta"><td>Sezgi</td><td>Görselleştirme, Üçüncü Göz</td><td>İçsel rehberlik</td><td>Orta</td></tr>
-                <tr data-tags="bolluk niyet" data-diff="kolay"><td>Bolluk</td><td>Niyet, Görselleştirme, Kalp</td><td>İnanç-duygu-imge</td><td>Kolay</td></tr>
-                <tr data-tags="ego spiritüel" data-diff="zor"><td>Ego/Benlik</td><td>Vipassana, İnziva</td><td>Benlik gözlemi</td><td>Zor</td></tr>
-                <tr data-tags="yaratıcılık akış" data-diff="kolay"><td>Yaratıcılık</td><td>Flow, Mandala/Renk</td><td>Sağ yarımküre</td><td>Kolay</td></tr>
-                <tr data-tags="aşk öz-sevgi" data-diff="orta"><td>Aşk Enerjisi</td><td>Kalp, Metta, Tantra</td><td>Empati/rezonans</td><td>Orta</td></tr>
-                <tr data-tags="motivasyon enerji" data-diff="orta"><td>Motivasyon</td><td>Mantra, Kundalini, Güçlü Nefes</td><td>Merkez aktivasyon</td><td>Orta</td></tr>
-                <tr data-tags="konsantrasyon çalışma" data-diff="orta"><td>Konsantrasyon</td><td>Trataka, Mantra, Sayma</td><td>Tek-nokta odak</td><td>Orta</td></tr>
-                <tr data-tags="spiritüel uyanış" data-diff="zor"><td>Spiritüel Uyanış</td><td>Kabbalistik, Hermetik, Kundalini, Zikir</td><td>Farkındalık sıçraması</td><td>Zor</td></tr>
-                <tr data-tags="travma güven" data-diff="kolay"><td>Travma Şifası</td><td>Görselleştirme, Kalp, Nidra</td><td>Güvenli alan</td><td>Kolay</td></tr>
-                <tr data-tags="denge günlük" data-diff="kolay"><td>Günlük Denge</td><td>Mindfulness, Yürüyüş, Aktivite</td><td>Yaşama entegrasyon</td><td>Kolay</td></tr>
-                <tr data-tags="sabır disiplin" data-diff="orta"><td>Sabır/Direnç</td><td>Vipassana, Metta, Mantra</td><td>Dayanıklılık</td><td>Orta</td></tr>
-                <tr data-tags="doğa topraklanma" data-diff="kolay"><td>Doğa ile Birleşmek</td><td>Doğa, Yürüyüş, Ağaç</td><td>Topraklanma</td><td>Kolay</td></tr>
-                <tr data-tags="bilinçaltı temizlik" data-diff="orta"><td>Bilinçaltı Temizliği</td><td>Nidra, Görselleştirme, Renk</td><td>Duygusal dönüşüm</td><td>Orta</td></tr>
-              </tbody>
+            $1
+                <tr data-tags="stres denge" data-diff="kolay"><td>Stres Azaltmak</td><td>Mindfulness, Nefes, Yoga Nidra</td><td>Parasempatik sistemi aktive eder.</td><td>Kolay</td></tr>
+                <tr data-tags="uyku bilinçaltı" data-diff="kolay"><td>Uykuya Geçiş</td><td>Yoga Nidra, Rehberli Görselleştirme</td><td>Beyni alfa–teta dalgalarına indirir.</td><td>Kolay</td></tr>
+                <tr data-tags="öz-sevgi aşk" data-diff="kolay"><td>Öz Şefkat</td><td>Metta, Kalp Koherans</td><td>Duygusal yumuşama, kabul.</td><td>Kolay</td></tr>
+                <tr data-tags="enerji motivasyon" data-diff="orta"><td>Enerji Artırmak</td><td>Kundalini, Pranayama, Qi Gong</td><td>Prana/Chi akışını hızlandırır.</td><td>Orta</td></tr>
+                <tr data-tags="temizlik aura" data-diff="orta"><td>Negatif Enerjiyi Temizlemek</td><td>Ses Banyosu, Chakra</td><td>Frekanssal arınma, dengeleme.</td><td>Orta</td></tr>
+                <tr data-tags="konsantrasyon zihin" data-diff="zor"><td>Düşünce Kontrolü</td><td>Zazen, Trataka</td><td>Gürültüyü azaltır, odak keskinleşir.</td><td>Zor</td></tr>
+                <tr data-tags="kaygı denge" data-diff="kolay"><td>Kaygı/Panik</td><td>Box Breathing, Mindfulness</td><td>Kalp atışı ve nefes regülasyonu.</td><td>Kolay</td></tr>
+                <tr data-tags="sezgi spiritüel" data-diff="orta"><td>Sezgi</td><td>Görselleştirme, Üçüncü Göz</td><td>İçsel rehberlik, sezgi kanalları.</td><td>Orta</td></tr>
+                <tr data-tags="bolluk niyet" data-diff="kolay"><td>Bolluk/Manifestasyon</td><td>Niyet, Görselleştirme, Kalp Odaklı</td><td>Duygu–imge–niyet uyumu.</td><td>Kolay</td></tr>
+                <tr data-tags="ego spiritüel" data-diff="zor"><td>Kendini Tanıma/Ego</td><td>Vipassana, Sessizlik İnvazası</td><td>Benlik gözlemi, çözülme.</td><td>Zor</td></tr>
+                <tr data-tags="yaratıcılık akış" data-diff="kolay"><td>Yaratıcılık</td><td>Flow, Mandala/Renk</td><td>Sağ yarımküre aktivasyonu.</td><td>Kolay</td></tr>
+                <tr data-tags="aşk öz-sevgi" data-diff="orta"><td>Aşk Enerjisi</td><td>Kalp Koherans, Metta, Tantra</td><td>Empati ve rezonans.</td><td>Orta</td></tr>
+                <tr data-tags="motivasyon enerji" data-diff="orta"><td>Motivasyon</td><td>Mantra, Kundalini, Güçlü Nefes</td><td>Merkez aktivasyonu.</td><td>Orta</td></tr>
+                <tr data-tags="konsantrasyon çalışma" data-diff="orta"><td>Konsantrasyon</td><td>Trataka, Mantra, Nefes Sayma</td><td>Tek nokta odak becerisi.</td><td>Orta</td></tr>
+                <tr data-tags="spiritüel uyanış" data-diff="zor"><td>Spiritüel Uyanış</td><td>Kabbalistik, Hermetik, Kundalini, Zikir</td><td>Farkındalık sıçraması.</td><td>Zor</td></tr>
+                <tr data-tags="travma güven" data-diff="kolay"><td>Travma Sonrası Şifa</td><td>Görselleştirme, Kalp Odaklı, Yoga Nidra</td><td>Güvenli alan, regülasyon.</td><td>Kolay</td></tr>
+                <tr data-tags="denge günlük" data-diff="kolay"><td>Günlük Denge</td><td>Mindfulness, Yürüyüş, Günlük Aktivite</td><td>Günlük yaşamda farkındalık.</td><td>Kolay</td></tr>
+                <tr data-tags="sabır disiplin" data-diff="orta"><td>Sabır/Direnç</td><td>Vipassana, Metta, Mantra</td><td>Zihin dayanıklılığı.</td><td>Orta</td></tr>
+                <tr data-tags="doğa topraklanma" data-diff="kolay"><td>Doğa ile Birleşmek</td><td>Doğa, Yürüyüş, Ağaç Odaklı</td><td>Topraklanma, huzur.</td><td>Kolay</td></tr>
+                <tr data-tags="bilinçaltı temizlik" data-diff="orta"><td>Bilinçaltı Temizliği</td><td>Yoga Nidra, Görselleştirme, Renk</td><td>Duygusal dönüşüm.</td><td>Orta</td></tr>
+              $2
             </table>
             <div class="cards" id="goalsCards" aria-hidden="true"></div>
           </div>
