--- a/index.html
+++ b/index.html
@@ -103,12 +103,10 @@
   <div class="app">
     <div class="inner">
       <header>
-        <h1>🧘‍♀️ Meditasyon Türleri Rehberi</h1>
-        <h2>H2 • Pozisyonlara ve Amaçlara Göre Filtrelenebilir Tablo</h2>
-        <p>Pastel arayüz, mobil güvenli tasarım ve canlı filtreler. <span class="chip">zorluk</span> · <span class="chip">süre</span> · <span class="chip">niyet</span></p>
+        <h1>Meditasyon Türleri Rehberi</h1>
+        <h2>Pozisyonlara ve Amaçlara Göre Filtrelenebilir Tablo</h2>
+        <p><span class="chip">zorluk</span> · <span class="chip">süre</span> · <span class="chip">niyet</span></p>
         <div class="meta">
-          <span class="chip">TR</span>
-          <span class="chip">GitHub Pages</span>
           <button id="themeBtn" class="btn theme-toggle" aria-pressed="false" aria-label="Tema değiştir">🌗 Tema</button>
         </div>
       </header>
@@ -116,10 +114,10 @@
       <!-- SECTION A: Türler -->
       <section class="card" id="types">
         <div class="hd">
-          <h2>H2 • 🌿 Meditasyon Türleri (Pozisyon / Teknik)</h2>
+          <h2>HMeditasyon Türleri (Pozisyon / Teknik)</h2>
         </div>
         <div class="bd">
-          <h3>H3 • Filtreler</h3>
+          <h3>Filtreler</h3>
           <div class="filters" role="region" aria-label="Meditasyon Türleri Filtreleri">
             <label for="typeSearch">Arama</label>
             <input type="search" id="typeSearch" placeholder="Ara: zazen, nefes, orman…" aria-label="Metin arama">
@@ -175,9 +173,9 @@
 
       <!-- SECTION B: Amaçlar -->
       <section class="card" id="goals">
-        <div class="hd"><h2>H2 • 🎯 Amaçlara Göre Meditasyon</h2></div>
+        <div class="hd"><h2>Amaçlara Göre Meditasyon</h2></div>
         <div class="bd">
-          <h3>H3 • Filtreler</h3>
+          <h3>Filtreler</h3>
           <div class="filters" role="region" aria-label="Amaçlara Göre Filtreler">
             <label for="goalSearch">Arama</label>
             <input type="search" id="goalSearch" placeholder="Ara: stres, uyku, şifa…" aria-label="Amaç arama">
@@ -233,19 +231,18 @@
 
       <!-- SECTION C: Meditasyon Etiketli Yazılar (Infinite Scroll) -->
       <section class="card" id="related-posts">
-        <div class="hd"><h2>H2 • 🪶 Meditasyon Etiketli Yazılar</h2></div>
+        <div class="hd"><h2>H2 • 🪶 Meditasyon ile ilgili Yayınlarımız</h2></div>
         <div class="bd">
-          <h3>H3 • Son Yayınlar</h3>
           <div id="postsList" class="posts-grid" aria-live="polite"></div>
           <div id="loader" class="loader" role="status">Yükleniyor…</div>
         </div>
       </section>
 
       <footer style="margin-top:22px">
-        <h3>H3 • SSS</h3>
-        <h4>H4 • Günde kaç dakika?</h4>
+        <h3>HSSS</h3>
+        <h4>Günde kaç dakika?</h4>
         <p>5–10 dk ile başla; her hafta +5 dk.</p>
-        <h4>H4 • Hangi pozisyon en iyi?</h4>
+        <h4>Hangi pozisyon en iyi?</h4>
         <p>Rahat ve sürdürülebilir olan.</p>
       </footer>
     </div>
