--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <!-- SECTION A: Türler -->
       <section class="card" id="types">
         <div class="hd">
-          <h2>HMeditasyon Türleri (Pozisyon / Teknik)</h2>
+          <h2>Meditasyon Türleri (Pozisyon / Teknik)</h2>
         </div>
         <div class="bd">
           <h3>Filtreler</h3>
