--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
       <!-- SECTION C: Meditasyon Etiketli Yazılar (Infinite Scroll) -->
       <section class="card" id="related-posts">
-        <div class="hd"><h2>H2 • 🪶 Meditasyon ile ilgili Yayınlarımız</h2></div>
+        <div class="hd"><h2>🪶 Meditasyon ile ilgili Yayınlarımız</h2></div>
         <div class="bd">
           <div id="postsList" class="posts-grid" aria-live="polite"></div>
           <div id="loader" class="loader" role="status">Yükleniyor…</div>
