--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <div class="app">
     <div class="inner">
       <header>
-        <h1>Meditasyon Türleri Rehberi</h1>
+        <h1> Türleri Rehberi</h1>
         <h2>Pozisyonlara ve Amaçlara Göre Filtrelenebilir Tablo</h2>
         <p><span class="chip">zorluk</span> · <span class="chip">süre</span> · <span class="chip">niyet</span></p>
         <div class="meta">
@@ -325,7 +325,7 @@
 
     // === Infinite Scroll Blogger Feed ===
     const BLOG_URL = 'https://BLOG_ADINIZ.blogspot.com'; // <- değiştir
-    const TAG = 'Meditasyon';
+    const TAG = 'meditasyon';
     let startIndex = 1; let endReached = false; let loading = false;
 
     async function loadPosts() {
