--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
       <!-- SECTION A: Türler -->
       <section class="card" id="types">
         <div class="hd">
-          <h2>Meditasyon Türleri (Pozisyon / Teknik)</h2>
+          <h2> Türleri (Pozisyon / Teknik)</h2>
         </div>
         <div class="bd">
           <h3>Filtreler</h3>
-          <div class="filters" role="region" aria-label="Meditasyon Türleri Filtreleri">
+          <div class="filters" role="region" aria-label=" Türleri Filtreleri">
             <label for="typeSearch">Arama</label>
             <input type="search" id="typeSearch" placeholder="Ara: zazen, nefes, orman…" aria-label="Metin arama">
             <label for="typeDifficulty">Zorluk</label>
@@ -324,7 +324,7 @@
     filterTypes(); filterGoals();
 
     // === Infinite Scroll Blogger Feed ===
-    const BLOG_URL = 'https://BLOG_ADINIZ.blogspot.com'; // <- değiştir
+    const BLOG_URL = 'https://tr.tabirly.com/'; // <- değiştir
     const TAG = 'meditasyon';
     let startIndex = 1; let endReached = false; let loading = false;
 
