--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     filterTypes(); filterGoals();
 
     // === Infinite Scroll Blogger Feed ===
-    const BLOG_URL = 'https://tr.tabirly.com/'; // <- değiştir
+    const BLOG_URL = 'https://tr.tabirly.com/feeds/posts/default?alt=rss'; // <- değiştir
     const TAG = 'meditasyon';
     let startIndex = 1; let endReached = false; let loading = false;
 
